Tratando la lista de arrays como una lista mediante el arrays.aslist